<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".views.CreateGroupActivity">

    <LinearLayout
        android:id="@+id/lin_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/addGroupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addGroupTitle" />

        <TextView
            android:id="@+id/groupNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/groupNameTitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/groupDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/groupDescriptionTitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/groupDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/emailsOfAdminsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailsOfAdminTitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailsOfAdmins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/emailsOfMembersText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailsOfMemberTitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailsOfMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Switch
            android:id="@+id/privateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privateGroupTitle" />

        <Button
            android:id="@+id/saveGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveGroup" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>